tests/specs/ecosystem/ayonli/jsext/0_8_8.test
ayonli/jsext/0.8.8
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/index.ts
Check file://<tmpdir>/array.ts
Check file://<tmpdir>/async.ts
Check file://<tmpdir>/bytes.ts
Check file://<tmpdir>/chan.ts
Check file://<tmpdir>/class.ts
Check file://<tmpdir>/collections.ts
Check file://<tmpdir>/debounce.ts
Check file://<tmpdir>/deprecate.ts
Check file://<tmpdir>/dialog.ts
Check file://<tmpdir>/error.ts
Check file://<tmpdir>/example.ts
Check file://<tmpdir>/func.ts
Check file://<tmpdir>/json.ts
Check file://<tmpdir>/lock.ts
Check file://<tmpdir>/math.ts
Check file://<tmpdir>/mixin.ts
Check file://<tmpdir>/number.ts
Check file://<tmpdir>/object.ts
Check file://<tmpdir>/parallel.ts
Check file://<tmpdir>/path.ts
Check file://<tmpdir>/queue.ts
Check file://<tmpdir>/read.ts
Check file://<tmpdir>/readAll.ts
Check file://<tmpdir>/run.ts
Check file://<tmpdir>/string.ts
Check file://<tmpdir>/throttle.ts
Check file://<tmpdir>/try.ts
Check file://<tmpdir>/wrap.ts
Check file://<tmpdir>/worker.ts
error: TS2503 [ERROR]: Cannot find namespace 'NodeJS'.
 */ export default function read<T>(target: NodeJS.EventEmitter, eventMap?: {
                                            ~~~~~~
    at file://<tmpdir>/read.ts:79:45

